--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
+            <nav class="nav container">
             
         </header>
 
